--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,129 @@
-h1 a{
-    color: #e4d1b0;
-    text-transform: uppercase;
-    font-weight: bold;
-    letter-spacing: 0.7rem;
+.menu-wrap {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1;
 }
-h1 a:hover {
-    color: #e4d1b0;
+
+.menu-wrap .toggler {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    cursor: pointer;
+    width: 50px;
+    height: 50px;
+    opacity: 0;
+}
+
+.menu-wrap .hamburger {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 60px;
+    height: 60px;
+    z-index: 1;
+    padding: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.menu-wrap .hamburger >div {
+    position: relative;
+    width: 100%;
+    height: 2px;
+    background-color: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.6s ease;
+}
+
+.menu-wrap .hamburger >div::before,
+.menu-wrap .hamburger >div::after {
+    content :'';
+    position: absolute;
+    top: -10px;
+    width: 100%;
+    height: 2px;
+    background: inherit;
+}
+.menu-wrap .hamburger >div::after {
+    top: 10px;
+}
+
+.menu-wrap .toggler:checked + .hamburger>div {
+    transform: rotate(135deg) ;
+}
+
+.menu-wrap .toggler:checked + .hamburger>div:before,
+.menu-wrap .toggler:checked + .hamburger>div:after {
+    top: 0;
+    transform: rotate(90deg);
+}
+
+.menu-wrap .toggler:checked:hover + .hamburger>div {
+    transform: rotate(225deg);
+}
+
+.menu-wrap .toggler:checked ~ .menu {
+    visibility: visible;
+}
+
+.menu-wrap .toggler:checked ~ .menu >div {
+    transform: scale(1);
+    transition-duration: var(--menu-speed);
+}
+
+.menu-wrap .toggler:checked ~ .menu >div>div {
+    opacity: 1;
+    transition: opacity 0.5s ease;
+}
+
+.menu-wrap .menu{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    visibility: hidden;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.menu-wrap .menu>div {
+    background: var(--overlay-color);
+    border-radius: 50%;
+    width: 200vw;
+    height: 200vw;
+    display: flex;
+    flex: none;
+    align-items: center;
+    justify-content: center;
+    transform: scale(0);
+    transform: all 0.5s ease;
+}
+
+.menu-wrap .menu>div >div {
+    text-align: center;
+    max-width: 90vw;
+    max-height: 100vw;
+    opacity: 0;
+    transition: opacity 0.4s ease;
+}
+
+.menu-wrap .menu>div >div >ul >li {
+    list-style: none;
+    color: black;
+    font-size: 1.5rem;
+    padding: 0.6rem;
+}
+
+.menu-wrap .menu>div >div >ul >li >a {
+    color: inherit;
     text-decoration: none;
-}
-.navbar-light .navbar-toggler {
-    border: none;
+    transition: color 0.5s ease;
 }
