--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,13 @@
+:root {
+    --overlay-color: rgba(0, 0, 0, 0.75);
+    --menu-speed: 1s;
+}
+
+header {
+    text-align: center;
+}
+
 .menu-wrap {
-    position: fixed;
     top: 0;
     left: 0;
     z-index: 1;
@@ -7,17 +15,19 @@
 
 .menu-wrap .toggler {
     position: absolute;
+    margin: 2rem 1.6rem;
     top: 0;
     left: 0;
     z-index: 2;
     cursor: pointer;
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     opacity: 0;
 }
 
 .menu-wrap .hamburger {
     position: absolute;
+    margin: 1.3rem 1rem;
     top: 0;
     left: 0;
     width: 60px;
@@ -31,7 +41,7 @@
 
 .menu-wrap .hamburger >div {
     position: relative;
-    width: 100%;
+    width: 80%;
     height: 2px;
     background-color: black;
     display: flex;
@@ -44,13 +54,13 @@
 .menu-wrap .hamburger >div::after {
     content :'';
     position: absolute;
-    top: -10px;
+    top: -8px;
     width: 100%;
     height: 2px;
     background: inherit;
 }
 .menu-wrap .hamburger >div::after {
-    top: 10px;
+    top: 8px;
 }
 
 .menu-wrap .toggler:checked + .hamburger>div {
@@ -78,13 +88,11 @@
 
 .menu-wrap .toggler:checked ~ .menu >div>div {
     opacity: 1;
-    transition: opacity 0.5s ease;
+    transition: opacity 0.6s ease;
 }
 
 .menu-wrap .menu{
     position: fixed;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
     visibility: hidden;
@@ -93,37 +101,48 @@
     align-items: center;
     justify-content: center;
 }
-
-.menu-wrap .menu>div {
+ 
+.menu-wrap .menu >div {
     background: var(--overlay-color);
-    border-radius: 50%;
     width: 200vw;
-    height: 200vw;
+    height: 200%;
     display: flex;
     flex: none;
     align-items: center;
     justify-content: center;
     transform: scale(0);
-    transform: all 0.5s ease;
+    transition: all 0.6s ease;
 }
 
-.menu-wrap .menu>div >div {
+.menu-wrap .menu > div > div {
     text-align: center;
     max-width: 90vw;
-    max-height: 100vw;
+    max-height: 100vh;
     opacity: 0;
-    transition: opacity 0.4s ease;
+    transition: opacity 0.6s ease;
 }
 
-.menu-wrap .menu>div >div >ul >li {
+.menu-wrap .menu > div > div >ul > li {
     list-style: none;
-    color: black;
-    font-size: 1.5rem;
-    padding: 0.6rem;
+    color: white;
+    font-size: 1.1rem;
+    padding: 0.5rem;
 }
 
-.menu-wrap .menu>div >div >ul >li >a {
+.menu-wrap .menu > div > div >ul > li >a {
     color: inherit;
     text-decoration: none;
-    transition: color 0.5s ease;
+    transition: color 0.6s ease;
+}
+
+.logo-cynes {
+    margin: 0.5rem ;
+}
+
+.main-image{
+    width: 90%;
+}
+
+.img-fluid {
+    margin-left: 5%;
 }
