--- a/css/style.css
+++ b/css/style.css
@@ -214,12 +214,28 @@ header {
     width: 90%;
 }
 
-.card, .md-6, .mb-4 {
-    position: initial;
-    
+.card {
+    border: none;
+    max-width: 50%;
+    margin: auto;
 }
 
+.citation{
+    font-size: 2rem;
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: 0.2rem;
+}
 
+.trait {
+    border-bottom: 3px solid black;
+    width: 25%;
+    margin: auto ;
+}
+
+.card, .md-6 {
+    position: initial;
+}
 
 .img-savoir-faire {
     object-fit: cover;
@@ -229,9 +245,13 @@ header {
 .row {
     max-width: 1300px;
     margin: auto;
-    flex-wrap: nowrap;
+    margin-top: 4rem;
+    
 }
 
+#marg {
+    margin-bottom: 4rem;
+}
 
 footer {
     text-align: center;
@@ -279,19 +299,19 @@ footer {
     position: relative;
     width: 100%;
     height: 300px;
-}
-   /* Image originale */
    
+}
+
 .overlay-image .image {
     display: block;
     width: 100%;
     height: 300px;
     object-fit: cover;
 }
-   /* Texte original */
+
 .overlay-image .text {
     color: #fff;
-    font-size: 30px;
+    font-size: 1.2rem;
     line-height: 1.5em;
     text-shadow: 2px 2px 2px #000;
     text-align: center;
@@ -302,7 +322,7 @@ footer {
     width: 100%;
 }
 
-/* Overlay */
+
 .overlay-image .hover {
     position: absolute;
     top: 0;
@@ -311,7 +331,7 @@ footer {
     opacity: 0;
     transition: .5s ease;
    }
-   /* Apparition overlay sur passage souris */
+   
    .overlay-image:hover .hover {
     opacity: 1;
    }
