--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,379 +1,421 @@
+/*************/
+/*           */
+/* Header    */
+/*           */
+/*************/
 body {
     font-family: 'Roboto';
-    }
+}
     
-    :root {
-        --overlay-color: rgba(0, 0, 0, 0.85);
-        --menu-speed: 1s;
-    }
+:root {
+    --overlay-color: rgba(0, 0, 0, 0.85);
+    --menu-speed: 1s;
+}
     
-    header {
-        text-align: center;
-        background: white;
-        top: 0;
-        z-index: 1;
-    }
+header {
+    text-align: center;
+    background: white;
+    top: 0;
+    z-index: 1;
+}
     
-    .nav-is-stuck header {
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0;
-        box-shadow: 0 1px 4px rgba(0, 0, 0, 0.15);
-        animation: stickAnim 0.8s;
-    }
+.nav-is-stuck header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.15);
+    animation: stickAnim 0.8s;
+}
      
-    @keyframes stickAnim {
-        0% {
-            transform: translateY(-132px);
-        }
-        100% {
-            transform: translateY(0);
-        }
+@keyframes stickAnim {
+    0% {
+        transform: translateY(-132px);
     }
-    .menu-wrap {
-        top: 0;
-        left: 0;
-        z-index: 1;
+    100% {
+        transform: translateY(0);
     }
+}
+.menu-wrap {
+    top: 0;
+    left: 0;
+    z-index: 1;
+}
     
-    .menu-wrap .toggler {
-        position: absolute;
-        margin: 2.5rem 1.9rem;
-        top: 0;
-        left: 0;
-        z-index: 2;
-        cursor: pointer;
-        width: 40px;
-        height: 40px;
-        opacity: 0;
-    }
+.menu-wrap .toggler {
+    position: absolute;
+    margin: 2.5rem 1.9rem;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    cursor: pointer;
+    width: 40px;
+    height: 40px;
+    opacity: 0;
+}
     
+.menu-wrap .hamburger {
+    position: absolute;
+    margin: 1.9rem 1rem;
+    top: 0;
+    left: 0;
+    width: 70px;
+    height: 60px;
+    z-index: 1;
+    padding: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+    
+.menu-wrap .hamburger >div {
+    position: relative;
+    width: 80%;
+    height: 11%;
+    background-color: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.6s ease;
+}
+    
+.menu-wrap .hamburger >div::before,
+.menu-wrap .hamburger >div::after {
+    content :'';
+    position: absolute;
+    top: -11px;
+    width: 100%;
+    height: 3px;
+    background: inherit;
+}
+
+.menu-wrap .hamburger >div::after {
+    top: 11px;
+}
+    
+.menu-wrap .toggler:checked + .hamburger>div {
+    transform: rotate(135deg) ;
+}
+    
+.menu-wrap .toggler:checked + .hamburger>div:before,
+.menu-wrap .toggler:checked + .hamburger>div:after {
+    top: 0;
+    transform: rotate(90deg);
+}
+    
+.menu-wrap .toggler:checked:hover + .hamburger>div {
+    transform: rotate(225deg);
+}
+    
+.menu-wrap .toggler:checked ~ .menu {
+    visibility: visible;
+}
+    
+.menu-wrap .toggler:checked ~ .menu >div {
+    transform: scale(1);
+    transition-duration: var(--menu-speed);
+}
+    
+.menu-wrap .toggler:checked ~ .menu >div>div {
+    opacity: 1;
+    transition: opacity 0.6s ease;
+}
+    
+.menu-wrap .menu{
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    visibility: hidden;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+     
+.menu-wrap .menu >div {
+    background: var(--overlay-color);
+    width: 200vw;
+    height: 200%;
+    display: flex;
+    flex: none;
+    align-items: center;
+    justify-content: center;
+    transform: scale(0);
+    transition: all 0.6s ease;
+}
+    
+.menu-wrap .menu > div > div {
+    text-align: center;
+    max-width: 90vw;
+    max-height: 100vh;
+    opacity: 0;
+    transition: opacity 0.6s ease;
+}
+    
+.menu-wrap .menu > div > div >ul {
+    padding-left: 0rem;
+}
+    
+.menu-wrap .menu > div > div >ul > li{
+    list-style: none;
+    color: white;
+    font-size: 1.2rem;
+    padding: 0.5rem;
+}
+    
+.menu-wrap .menu > div > div >ul > li >a {
+    color: inherit;
+    text-decoration: none;
+    text-transform: uppercase;
+    transition: color 0.6s ease;
+}
+.menu-wrap .menu > div > div >ul > li >a:hover {
+    color : grey
+}
+    
+.logo-cynes {
+    margin: 0.6rem ;
+    height: 110px;
+}
+    
+/*************/
+/*           */
+/* Home-page */
+/*           */
+/*************/
+
+#intro {
+    align-items: center;
+}
+    
+.main-image{
+    padding-bottom: 1rem;
+}
+    
+.img-fluid {
+    margin-left: 5%;
+    width: 90%;
+}
+    
+.card {
+    border: none;
+    margin: auto;
+}
+    
+.citation{
+    font-size: 2rem;
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: 0.2rem;
+}
+    
+.trait {
+    border-bottom: 3px solid black;
+    width: 25%;
+    margin: auto ;
+}
+    
+.card, .md-6 {
+    position: initial;
+}
+    
+.img-savoir-faire {
+    object-fit: cover;
+    height: 300px;
+}
+    
+.row {
+    max-width: 1300px;
+    margin: auto;
+    margin-top: 4rem;
+}
+    
+#marg {
+    margin-top: 4rem;
+    margin-bottom: 4rem;
+}
+    
+footer {
+    text-align: center;
+    background-color: black; 
+}
+    
+.logo {
+    height: 180px;
+}
+    
+.icone-contact {
+    margin-top: -1rem;
+    margin-bottom: 1rem;
+}
+
+.icone-contact a {
+    text-decoration: none;
+    transition: color 0.2s ease;
+    color: white;
+}
+    
+.icone-contact a:hover {
+    color : grey
+}
+    
+#phone {
+    margin-left: 1rem;
+    margin-right: 1rem;
+}
+    
+.information {
+    color: white;
+}
+.information a{
+    text-decoration: none;
+    transition: color 0.2s ease;
+    color: white;
+}
+    
+.information a:hover{
+    color: grey;
+}
+    
+    
+.overlay-image {
+    position: relative;
+    width: 100%;
+    height: 400px;
+}
+    
+.overlay-image .image {
+    display: block;
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
+}
+    
+.overlay-image .text {
+    color: #fff;
+    font-size: 1.2rem;
+    line-height: 1.5em;
+    text-shadow: 2px 2px 2px #000;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+}
+    
+.overlay-image .hover {
+    position: absolute;
+    top: 0;
+    height: 400px;
+    width: 100%;
+    opacity:0;
+    transition: .5s ease;
+}
+
+#background-black, #background-black-order  {
+    background: black;
+    order:0;
+}
+
+.mb-4 {
+    padding: 0;
+}
+       
+.overlay-image:hover .hover {
+    opacity: 1;
+}
+    
+.overlay-image .normal {
+    transition: .5s ease;
+}
+
+.overlay-image:hover .normal {
+    opacity: 0;
+}
+
+.overlay-image .hover {
+    background-color: rgba(0,0,0,1);
+}
+
+@media (min-width: 768px){
+    #background-black-order {
+        order:+1;
+    }
+}
+@media (min-width: 1025px){
+    #background-black-order {
+        order:0;
+    }
+}
+    
+@media (max-width: 576px) {
+    .logo-cynes {
+        height: 50px;
+        margin: 0.2rem
+    }
     .menu-wrap .hamburger {
-        position: absolute;
-        margin: 1.9rem 1rem;
-        top: 0;
-        left: 0;
-        width: 70px;
-        height: 60px;
-        z-index: 1;
-        padding: 1rem;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+        margin-top: -0.1rem;
+        width: 52px;
     }
-    
-    .menu-wrap .hamburger >div {
-        position: relative;
-        width: 80%;
-        height: 11%;
-        background-color: black;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        transition: all 0.6s ease;
+    .menu-wrap .hamburger >div{
+        height: 7%;
     }
-    
-    .menu-wrap .hamburger >div::before,
+    .menu-wrap .hamburger >div::before, 
     .menu-wrap .hamburger >div::after {
-        content :'';
-        position: absolute;
-        top: -11px;
-        width: 100%;
-        height: 3px;
-        background: inherit;
+        top: -6px;
+        height: 2px;
     }
     .menu-wrap .hamburger >div::after {
-        top: 11px;
+        top: 5px;
+        height: 2px;
     }
-    
-    .menu-wrap .toggler:checked + .hamburger>div {
-        transform: rotate(135deg) ;
+    .menu-wrap .toggler {
+        margin: 1.1rem 2rem;
+        width: 20px;
+        height: 20px;
     }
-    
-    .menu-wrap .toggler:checked + .hamburger>div:before,
-    .menu-wrap .toggler:checked + .hamburger>div:after {
-        top: 0;
-        transform: rotate(90deg);
-    }
-    
-    .menu-wrap .toggler:checked:hover + .hamburger>div {
-        transform: rotate(225deg);
-    }
-    
-    .menu-wrap .toggler:checked ~ .menu {
-        visibility: visible;
-    }
-    
-    .menu-wrap .toggler:checked ~ .menu >div {
-        transform: scale(1);
-        transition-duration: var(--menu-speed);
-    }
-    
-    .menu-wrap .toggler:checked ~ .menu >div>div {
-        opacity: 1;
-        transition: opacity 0.6s ease;
-    }
-    
-    .menu-wrap .menu{
-        position: absolute;
-        width: 100%;
-        height: 100vh;
-        visibility: hidden;
-        overflow: hidden;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-     
-    .menu-wrap .menu >div {
-        background: var(--overlay-color);
-        width: 200vw;
-        height: 200%;
-        display: flex;
-        flex: none;
-        align-items: center;
-        justify-content: center;
-        transform: scale(0);
-        transition: all 0.6s ease;
-    }
-    
-    .menu-wrap .menu > div > div {
-        text-align: center;
-        max-width: 90vw;
-        max-height: 100vh;
-        opacity: 0;
-        transition: opacity 0.6s ease;
-    }
-    
-    .menu-wrap .menu > div > div >ul {
-        padding-left: 0rem;
-    }
-    
-    .menu-wrap .menu > div > div >ul > li{
+    .menu-wrap .menu > div > div >ul > li {
         list-style: none;
         color: white;
-        font-size: 1.2rem;
+        font-size: 1rem;
         padding: 0.5rem;
     }
     
-    .menu-wrap .menu > div > div >ul > li >a {
-        color: inherit;
-        text-decoration: none;
-        text-transform: uppercase;
-        transition: color 0.6s ease;
-    }
-    .menu-wrap .menu > div > div >ul > li >a:hover {
-        color : grey
-    }
-    
-    .logo-cynes {
-        margin: 0.6rem ;
-        height: 110px;
-    }
-    
-    #intro {
-        align-items: center;
-    }
-    
-    .main-image{
-        padding-bottom: 1rem;
-    }
-    
-    .img-fluid {
-        margin-left: 5%;
-        width: 90%;
-    }
-    
-    .card {
-        border: none;
-        margin: auto;
-    }
-    
-    .citation{
-        font-size: 2rem;
-        font-weight: bold;
-        text-transform: uppercase;
-        letter-spacing: 0.2rem;
-    }
-    
-    .trait {
-        border-bottom: 3px solid black;
-        width: 25%;
-        margin: auto ;
-    }
-    
-    .card, .md-6 {
-        position: initial;
-    }
-    
-    .img-savoir-faire {
-        object-fit: cover;
-        height: 300px;
-    }
-    
     .row {
-        max-width: 1300px;
-        margin: auto;
-        margin-top: 4rem;
+        margin-top: 0;
+        margin:auto ;
     }
-    
+
+    .card-body {
+        padding: 0.3rem 1.25rem;
+    }
+
+    #expertise{
+        margin-top: 1.7rem;
+    }
+
     #marg {
-        margin-bottom: 4rem;
-        margin-top: 4rem;
+        margin-bottom: 0rem;
     }
-    
-    footer {
-        text-align: center;
-        background-color: black; 
-    }
-    
-    .logo {
-        height: 180px;
-    }
-    
-    .icone-contact {
-        margin-top: -1rem;
-        margin-bottom: 1rem;
-    }
-    .icone-contact a {
-        text-decoration: none;
-        transition: color 0.2s ease;
-        color: white;
-    }
-    
-    .icone-contact a:hover {
-        color : grey
-    }
-    
-    #phone {
-        margin-left: 1rem;
-        margin-right: 1rem;
-    }
-    
-    .information {
-        color: white;
-    }
-    .information a{
-        text-decoration: none;
-        transition: color 0.2s ease;
-        color: white;
-    }
-    
-    .information a:hover{
-        color: grey;
-    }
-    
-    
-    .overlay-image {
-        position: relative;
-        width: 100%;
-        height: 400px;
-    }
-    
-    .overlay-image .image {
-        display: block;
-        width: 100%;
-        height: 400px;
-        object-fit: cover;
-    }
-    
-    .overlay-image .text {
-        color: #fff;
-        font-size: 1.2rem;
-        line-height: 1.5em;
-        text-shadow: 2px 2px 2px #000;
-        text-align: center;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        width: 100%;
-    }
-    
-    .overlay-image .hover {
-        position: absolute;
-        top: 0;
-        height: 400px;
-        width: 100%;
-        opacity: 0;
-        transition: .5s ease;
-    }
-
-    #background-black, #background-black-order  {
-        background: black;
-        order:0;
-    }
-
-    .mb-4 {
-        padding: 0;
-    }
-       
-    .overlay-image:hover .hover {
-        opacity: 1;
-    }
-    
-    .overlay-image .normal {
-        transition: .5s ease;
-    }
-    .overlay-image:hover .normal {
-        opacity: 0;
-    }
-    .overlay-image .hover {
-        background-color: rgba(0,0,0,1);
-    }
-
-    @media (min-width: 768px){
-        #background-black-order {
-            order:+1;
-        }
-    }
-    @media (min-width: 1025px){
-        #background-black-order {
-            order:0;
-        }
-    }
-    
-    @media (max-width: 576px) {
-        .logo-cynes {
-            height: 50px;
-            margin: 0.2rem;
-        }
-        .menu-wrap .hamburger {
-            margin-top: -0.1rem;
-            width: 52px;
-        }
-        .menu-wrap .hamburger >div{
-            height: 7%;
-        }
-        .menu-wrap .hamburger >div::before, 
-        .menu-wrap .hamburger >div::after {
-            top: -6px;
-            height: 2px;
-        }
-        .menu-wrap .hamburger >div::after {
-            top: 5px;
-            height: 2px;
-        }
-        .menu-wrap .toggler {
-            margin: 1.1rem 2rem;
-            width: 20px;
-            height: 20px;
-        }
-        .menu-wrap .menu > div > div >ul > li {
-            list-style: none;
-            color: white;
-            font-size: 1rem;
-            padding: 0.5rem;
-        }
-    
-        .row {
-            margin-top: 0;
-            margin:auto ;
-        }
-
-        .card-body {
-            padding: 0.3rem 1.25rem;
-        }
 }
-    
+
+.card-img {
+    height: 100%;
+}
+
+.trait-2 {
+    border-bottom: 3px solid black;
+    width: 25%;
+    margin: auto ;
+}
+
+#expertise {
+    max-width: 540px;
+}
+
+/*************/
+/*           */
+/* Contact   */
+/*           */
+/*************/
