--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5,6 +5,7 @@
 /*************/
 body {
     font-family: 'Roboto';
+    padding-top: 129px;
 }
     
 :root {
@@ -26,6 +27,7 @@ header {
     right: 0;
     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.15);
     animation: stickAnim 0.8s;
+    
 }
      
 @keyframes stickAnim {
@@ -35,7 +37,18 @@ header {
     100% {
         transform: translateY(0);
     }
-}
+} 
+
+/* @keyframes stickAnimOut {
+    0% {
+        transform: translateY(0);
+    }
+    100% {
+        transform: translateY(-132px);
+    }
+} */
+
+
 .menu-wrap {
     top: 0;
     left: 0;
@@ -350,6 +363,10 @@ footer {
 }
     
 @media (max-width: 576px) {
+    body {
+        padding-top: 56px;
+    } 
+
     .logo-cynes {
         height: 50px;
         margin: 0.2rem
@@ -419,3 +436,34 @@ footer {
 /* Contact   */
 /*           */
 /*************/
+
+.form-control-societe {
+    display: block;
+    width: 100%;
+    height: calc(1.5em + .75rem + 2px);
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: .25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+.col-md-4, .col-xl-10 {
+    margin: 0.5rem 0;
+}
+
+
+@media (min-width: 576px) {
+    #img-contact {
+        width: 100%;
+        height: 700px;
+        margin: 0;
+    }
+}   
+
+
