--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5,6 +5,7 @@
 /*************/
 body {
     font-family: 'Gotham';
+    padding-top: 129px;
 }
     
 :root {
@@ -199,7 +200,7 @@ header {
     align-items: center;
 }
 
-.card-img{
+.main-img{
     height: 745px;
     object-fit: cover;
     margin: 1% 5%;
@@ -208,11 +209,13 @@ header {
 
 .card-img-overlay {
     padding: 0;
-    top: 50%;
+    top: 48%;
 }
 
 .card-title {
     text-align: center;
+    text-transform: uppercase;
+    letter-spacing: 0.4rem;
 }
 .card {
     border: none;
@@ -224,9 +227,13 @@ header {
 }
 .citation{
     font-size: 2rem;
-    font-weight: bold;
     text-transform: uppercase;
+    font-weight: 900;
     letter-spacing: 0.2rem;
+}
+
+.card-text {
+    font-weight: bold;
 }
     
 .trait {
@@ -433,6 +440,15 @@ footer {
     .mb-3 {
         margin-bottom: 2rem!important;
     }
+
+    .main-img{
+        height: 440px;
+        object-fit: cover;
+    }
+
+    .card-title {
+        font-size: 0.6rem;
+    }
 }
 
 #expertise {
@@ -445,6 +461,10 @@ footer {
     object-fit: cover;
     margin: 1% 5%;
     width: 90%;
+}
+
+h3 {
+    font-weight: 800;
 }
 
 /*************/
@@ -487,5 +507,63 @@ footer {
     color: green;
     text-align: center;
 }
+
+/******************/
+/*                */
+/* Savoir-faire   */
+/*                */
+/******************/
+
+.mt-0 {
+    align-items: center;
+}
+
+.separation {
+    text-align: center;
+    padding: 6rem;
+    background-color: black;
+    color: white;
+    width: 85%;
+    margin: 2rem auto;
+    border-radius: 10px;  
+}
+
+@media (max-width: 576px) {
+    #img-order {
+        order: -1; 
+    }
+
+    .card-expertise{
+        margin-bottom: 3rem;
+    }
+    
+    .card-body-expertise {
+        padding: 0 1.25rem;
+    }
+
+    .card-title {
+        font-size: 1rem;
+        margin: 1rem 0;
+        font-weight: 900;
+    }
+
+    .separation {
+        width: 100%;
+    }
+}
+
+
+@media (min-width: 768px){
+    .card-body-expertise {
+        padding: 0 2rem;
+    }
+
+    .card-title, .card-text {
+        margin-bottom: 2rem;
+        margin-top: 2rem;
+    }
+    
+}
+
 
 
