--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -212,7 +212,8 @@ header {
     top: 48%;
 }
 
-.card-title {
+.card-title-overlay, .card-title {
+    font-size: 1.5rem;
     text-align: center;
     text-transform: uppercase;
     letter-spacing: 0.4rem;
@@ -359,7 +360,7 @@ footer {
 
 @media (min-width: 768px){
     #background-black-order {
-        order:+1;
+        order:-1;
     }
     .row {
         margin-top: 2rem;
@@ -384,33 +385,31 @@ footer {
     
 @media (max-width: 576px) {
     body {
-        padding-top: 56px;
+        padding-top: 86px;
     } 
 
     .logo-cynes {
-        height: 50px;
+        height: 80px;
         margin: 0.2rem
     }
     .menu-wrap .hamburger {
-        margin-top: -0.1rem;
-        width: 52px;
+        margin-top: 0.8rem;
+        width: 60px;
     }
-    .menu-wrap .hamburger >div{
-        height: 7%;
-    }
+
     .menu-wrap .hamburger >div::before, 
     .menu-wrap .hamburger >div::after {
-        top: -6px;
-        height: 2px;
+        top: -7px;
+        height: 3px;
     }
     .menu-wrap .hamburger >div::after {
-        top: 5px;
-        height: 2px;
+        top: 7px;
+        height: 3px;
     }
     .menu-wrap .toggler {
-        margin: 1.1rem 2rem;
-        width: 20px;
-        height: 20px;
+        margin: 1.6rem 1.9rem;
+        width: 30px;
+        height: 30px;
     }
     .menu-wrap .menu > div > div >ul > li {
         list-style: none;
@@ -446,8 +445,8 @@ footer {
         object-fit: cover;
     }
 
-    .card-title {
-        font-size: 0.6rem;
+    .card-title-overlay {
+        font-size: 1.4rem;
     }
 }
 
@@ -520,12 +519,19 @@ h3 {
 
 .separation {
     text-align: center;
-    padding: 6rem;
-    background-color: black;
+    padding: 3rem;
+    background-color: rgb(54, 53, 50);
     color: white;
     width: 85%;
-    margin: 2rem auto;
+    margin: 4rem auto;
     border-radius: 10px;  
+}
+
+.separation span {
+    text-transform: uppercase;
+    font-size: 1.3rem;
+    letter-spacing: 0.3rem;
+    font-style: italic;
 }
 
 @media (max-width: 576px) {
@@ -551,7 +557,6 @@ h3 {
         width: 100%;
     }
 }
-
 
 @media (min-width: 768px){
     .card-body-expertise {
