--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -257,7 +257,7 @@ header {
 footer {
     text-align: center;
     background-color: black; 
-    margin-top: 2rem;
+    margin-top: 6rem;
 }
     
 .logo {
@@ -519,22 +519,6 @@ h3 {
     align-items: center;
 }
 
-.separation {
-    text-align: center;
-    padding: 3rem;
-    background-color: rgb(54, 53, 50);
-    color: white;
-    width: 85%;
-    margin: 4rem auto;
-    border-radius: 10px;  
-}
-
-.separation span {
-    text-transform: uppercase;
-    font-size: 1.3rem;
-    letter-spacing: 0.3rem;
-    font-style: italic;
-}
 
 @media (max-width: 576px) {
     #img-order {
@@ -610,8 +594,9 @@ h3 {
     transition: 0.7s ease;
 }
 
-#return-btn {
-   
+.title-projet {
+    margin-top: 2rem;
+    text-align: center;
 }
 
 
