--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -468,6 +468,12 @@ h3 {
     font-weight: 800;
 }
 
+@media (max-width: 992px) {
+    .btn {
+        display: none;
+    }
+}
+
 /*************/
 /*           */
 /* Contact   */
@@ -579,17 +585,17 @@ h3 {
 #projet-overlay-image {
     width: 90%;
     margin:  1.5rem auto ;
-    height: 500px;
+    height: 650px;
 }
 
 #projet-overlay-image .image {
-    height: 500px;
+    height: 650px;
 }
 
 #projet-overlay-image .hover {
     height: 50px;
     bottom: 0;
-    top: 90%;
+    top: 92.5%;
     background-color: rgba(0,0,0,0.8);
     transition: 0.7s ease;
 }
@@ -599,4 +605,17 @@ h3 {
     text-align: center;
 }
 
+@media (max-width: 576px) {
+    #projet-overlay-image {
+        height: 450px;
+    }
+
+    #projet-overlay-image .image{
+        height: 450px;
+    }
+
+    #projet-overlay-image .hover {
+        top: 89%;
+    }
+}
 
