--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -468,11 +468,7 @@ h3 {
     font-weight: 800;
 }
 
-@media (max-width: 992px) {
-    .btn {
-        display: none;
-    }
-}
+
 
 /*************/
 /*           */
@@ -600,9 +596,14 @@ h3 {
     transition: 0.7s ease;
 }
 
-.title-projet {
-    margin-top: 2rem;
+.projet-title {
     text-align: center;
+    padding-top: 2rem;
+}
+
+.title {
+    text-transform: uppercase;
+    display: inline;
 }
 
 @media (max-width: 576px) {
@@ -616,6 +617,40 @@ h3 {
 
     #projet-overlay-image .hover {
         top: 89%;
+    }
+}
+
+#return {
+    position: fixed;
+    display: inline;
+    margin-left: 1.9rem;
+    width: 40px;
+    height: 40px;
+    background-color: white;
+    border: none;
+    transition: background-color .3s, opacity .5s, visibility .5s;
+    margin-top: 2rem;
+}
+#return::after {
+    content: "\f053";
+    font-family: 'FontAwesome';
+    font-size: 2em;
+    line-height: 40px;
+    padding-left: 8px;
+    color: black;
+    border: none;
+    margin-top: 2rem;
+}
+
+#return:hover {
+    cursor: pointer;
+    background-color: rgb(241, 237, 237);
+
+  }
+
+@media (max-width: 992px) {
+    #return {
+        display: none;
     }
 }
 
