fix CSS titre homepage

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -199,16 +199,25 @@ p {
 }
 
 .card-img-overlay {
+    position: relative;
     padding: 0;
-    top: 61%;
 }
 
-.card-title-overlay, .card-title {
-    font-size: 1.5rem;
+.container-title-overlay {
+    position: absolute;
+    top: 42%;
+    width: 100%;
+    margin: auto;
+}
+
+.title-overlay, .card-title {
+    font-size: 1.5rem !important;
     text-align: center;
     text-transform: uppercase;
     letter-spacing: 0.4rem;
+    color: white;
 }
+
 .card {
     border: none;
     margin: auto;
@@ -364,16 +373,20 @@ footer {
         margin-bottom: 2rem;
     }
 
-    .card-title-overlay {
-        width: 90%;
+    .container-title-overlay {
         margin: auto;
+    }
+
+    .title-overlay {
+        font-size: 1.2rem !important;
     }
 }
 
 @media (min-width: 1025px){
     #background-black-order {
         order:0;
-    } 
+    }
+     
 }
 
 @media (max-width: 1025px) {
@@ -462,10 +475,12 @@ footer {
         object-fit: cover;
     }
 
-    .card-title-overlay {
-        font-size: 1.1rem;
-        width: 90%;
+    .container-title-overlay {
         margin: auto;
+    }
+
+    .title-overlay {
+        font-size: 1.1rem !important;
     }
 
     .card-img-overlay {
